--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Compile LaTeX document
       uses: xu-cheng/latex-action@v2
       with:
-        root_file: main.tex
+        root_file: cv.tex
     - name: Check pdf file
       run: |
         file cv.pdf | grep -q ' PDF '
