--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         root_file: cv.tex
     - name: Check pdf file
       run: |
-        file cv.pdf | grep -q ' PDF '
+        file main.pdf | grep -q ' PDF '
     - name: Upload cv.pdf
       run: |
         # configure git
@@ -26,7 +26,7 @@ jobs:
         chmod 600 ~/.ssh/id_ed25519
         git config --global core.sshCommand "ssh -i ~/.ssh/id_ed25519 -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
         git clone --depth=1 git@github.com:kelseygonzalez/website.git "$GITHUB_WORKSPACE/website"
-        cp -f cv.pdf "$GITHUB_WORKSPACE/website/static/files/cv.pdf"
+        cp -f main.pdf "$GITHUB_WORKSPACE/website/static/files/cv.pdf"
         cd "$GITHUB_WORKSPACE/website"
         git add file/cv.pdf
         git commit -m "[github actions] update cv"
